WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279902
Return final ContentRuleList file after compilation instead of temporary file
https://bugs.webkit.org/show_bug.cgi?id=279902
Summary
Return final ContentRuleList file after compilation instead of temporary file
Olivier Blin
Reported
2024-09-18 08:59:42 PDT
After compiling a ContentRuleList, a map of the temporary file was returned, instead of the final file. This shared a map to a read-write filehandle to the WebProcess, while it does not need to write the file. Instead, share a read-only map of the final file.
Attachments
Add attachment
proposed patch, testcase, etc.
Olivier Blin
Comment 1
2024-09-18 09:01:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33834
EWS
Comment 2
2024-09-19 03:52:10 PDT
Committed
283910@main
(9f1e386e4dc8): <
https://commits.webkit.org/283910@main
> Reviewed commits have been landed. Closing PR #33834 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-09-19 03:53:14 PDT
<
rdar://problem/136284062
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug